--- a/circle.yml
+++ b/circle.yml
@@ -49,7 +49,7 @@ deployment:
   dev:
     branch: develop
     commands:
-      - find . -name 'main-config.js' -exec sed -i 's/cdn.maptiks.com/cdn-staging.maptiks.com/g' {} +
+      - find . -name 'main-config.js' -exec sed -i 's/cdn.maptiks.com/cdn-dev.maptiks.com/g' {} +
       - aws s3 sync deploy/ s3://templates-dev.maptiks.com/MapJournal/ --delete --quiet
       - >
         curl -X DELETE "https://api.cloudflare.com/client/v4/zones/34e8519f80106c3699e76002b4153ce5/purge_cache"
