--- a/circle.yml
+++ b/circle.yml
@@ -38,7 +38,7 @@ deployment:
     owner: sparkgeo
     commands:
       - find . -name 'demo.html' -exec sed -i 's/c28cbfab-8f6a-4cc3-abe8-9209dcf5ec93/f3abdf3b-1b2b-4631-a2b7-5201b5b6d66f/g' {} +
-      - find . -name 'main-config.js' -exec sed -i 's/cdn.maptiks.com/cdn-staging.maptiks.com/g' {} +
+      - find . -name 'app/main-config.js' -exec sed -i 's/cdn.maptiks.com/cdn-staging.maptiks.com/g' {} +
       - aws s3 sync deploy/ s3://templates-staging.maptiks.com/MapJournal/ --delete --quiet
       - >
         curl -X DELETE "https://api.cloudflare.com/client/v4/zones/34e8519f80106c3699e76002b4153ce5/purge_cache"
@@ -49,7 +49,7 @@ deployment:
   dev:
     branch: develop
     commands:
-      - find . -name 'main-config.js' -exec sed -i 's/cdn.maptiks.com/cdn-dev.maptiks.com/g' {} +
+      - find . -name 'app/main-config.js' -exec sed -i 's/cdn.maptiks.com/cdn-dev.maptiks.com/g' {} +
       - aws s3 sync deploy/ s3://templates-dev.maptiks.com/MapJournal/ --delete --quiet
       - >
         curl -X DELETE "https://api.cloudflare.com/client/v4/zones/34e8519f80106c3699e76002b4153ce5/purge_cache"
