--- a/circle.yml
+++ b/circle.yml
@@ -49,7 +49,7 @@ deployment:
   dev:
     branch: develop
     commands:
-      - find . -name 'main-config.js' -exec sed -i 's/cdn.maptiks.com/cdn-dev.maptiks.com/g' {} +
+      - sed -i 's/cdn.maptiks.com/cdn-dev.maptiks.com/g' deploy/app/main-config.js
       - find . -name 'demo.html' -exec sed -i 's/c311cf16-ad79-42b1-97f9-f433be6c8b00/c28cbfab-8f6a-4cc3-abe8-9209dcf5ec93/g' {} +
       - aws s3 sync deploy/ s3://templates-dev.maptiks.com/MapJournal/ --delete --quiet
       - >
