--- a/circle.yml
+++ b/circle.yml
@@ -49,8 +49,8 @@ deployment:
   dev:
     branch: develop
     commands:
-      - sed -i 's/cdn.maptiks.com/cdn-dev.maptiks.com/g' deploy/app/main-config.js
       - find . -name 'demo.html' -exec sed -i 's/c311cf16-ad79-42b1-97f9-f433be6c8b00/c28cbfab-8f6a-4cc3-abe8-9209dcf5ec93/g' {} +
+      - find . -name 'main-config.js' -exec sed -i 's/cdn.maptiks.com/cdn-dev.maptiks.com/g' {} +
       - aws s3 sync deploy/ s3://templates-dev.maptiks.com/MapJournal/ --delete --quiet
       - >
         curl -X DELETE "https://api.cloudflare.com/client/v4/zones/34e8519f80106c3699e76002b4153ce5/purge_cache"
