--- a/package.json
+++ b/package.json
@@ -1,25 +1,27 @@
 {
   "name": "Storymaps-MapJournal",
   "scripts": {
-    "init": "npm install && npm install -g grunt-cli",
+    "init": "npm install",
     "clean": "rm -rf node_modules",
     "fresh_install": "npm run clean && npm run init",
-    "build": "npm run grunt"
+    "build": "grunt"
   },
   "version": "1.11.0",
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-contrib-clean": "~0.4.0",
-    "grunt-contrib-requirejs": "~0.4.1",
-    "grunt-contrib-copy": "~0.4.1",
-    "grunt-regex-replace": "~0.2.5",
-    "grunt-contrib-jshint": "~0.4.3",
-    "grunt-contrib-connect": "~0.3.0",
-    "grunt-contrib-watch": "~0.5.1",
-    "grunt-mkdir": "~0.1.1",
-    "load-grunt-tasks": "~0.3.0",
     "csso": "~1.3.10",
+    "grunt": "~0.4.1",
+    "grunt-cli": "^1.3.1",
+    "grunt-contrib-clean": "~0.4.0",
+    "grunt-contrib-concat": "^0.5.0",
+    "grunt-contrib-connect": "~0.3.0",
+    "grunt-contrib-copy": "~0.4.1",
+    "grunt-contrib-jshint": "~0.4.3",
+    "grunt-contrib-requirejs": "~0.4.1",
+    "grunt-contrib-watch": "~0.5.1",
     "grunt-execute": "^0.2.2",
-    "grunt-contrib-concat": "^0.5.0"
-  }
+    "grunt-mkdir": "~0.1.1",
+    "grunt-regex-replace": "~0.2.5",
+    "load-grunt-tasks": "~0.3.0"
+  },
+  "dependencies": {}
 }
