--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,7 +59,7 @@ jobs:
             find . -name 'demo.html' -exec sed -i 's/c311cf16-ad79-42b1-97f9-f433be6c8b00/92802626-2640-4f09-9121-6a0292cf012e/g' {} +
       - run:
           name: deploy to aws
-          command: aws s3 sync deploy/ s3://templates.maptiks.com/MapJournal/ --delete --quiet
+          command: aws s3 sync deploy/ s3://templates.maptiks.com/MapJournal/ --delete
       - run:
           name: clear cloudflare cache
           command: |
@@ -77,7 +77,7 @@ jobs:
             find . -name 'main-config.js' -exec sed -i 's/cdn.maptiks.com/cdn-staging.maptiks.com/g' {} +
       - run:
           name: deploy to aws
-          command: aws s3 sync deploy/ s3://templates-staging.maptiks.com/MapJournal/ --delete --quiet
+          command: aws s3 sync deploy/ s3://templates-staging.maptiks.com/MapJournal/ --delete
       - run:
           name: clear cloudflare cache
           command: |
@@ -95,7 +95,7 @@ jobs:
             find . -name 'main-config.js' -exec sed -i 's/cdn.maptiks.com/cdn-dev.maptiks.com/g' {} +
       - run:
           name: deploy to aws
-          command: aws s3 sync deploy/ s3://templates-dev.maptiks.com/MapJournal/ --delete --quiet
+          command: aws s3 sync deploy/ s3://templates-dev.maptiks.com/MapJournal/ --delete
       - run:
           name: clear cloudflare cache
           command: |
